APPLY CHANGv